Progress on transfer learning. More to come

--- a/Transfer Learning Notebooks/InceptionV3 on Spectrogram - kFold.ipynb
+++ b/Transfer Learning Notebooks/InceptionV3 on Spectrogram - kFold.ipynb
@@ -30,7 +30,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import tensorflow as tf\n",
+    "from keras.backend.tensorflow_backend import set_session\n",
+    "config = tf.ConfigProto()\n",
+    "config.gpu_options.allow_growth = True\n",
+    "sess = tf.Session(config=config)\n",
+    "set_session(sess)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,16 +158,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "urban_sounds_folder = \"/media/nvidia/d171b53a-0021-4d77-b891-8d723bedc16d1/soundflux/urbansounds/spectrograms\""
+    "urban_sounds_folder = \"/home/nvidia/soundflux_data/spectrograms\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,25 +179,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['/media/nvidia/d171b53a-0021-4d77-b891-8d723bedc16d1/soundflux/urbansounds/spectrograms/fold1',\n",
-       " '/media/nvidia/d171b53a-0021-4d77-b891-8d723bedc16d1/soundflux/urbansounds/spectrograms/fold2',\n",
-       " '/media/nvidia/d171b53a-0021-4d77-b891-8d723bedc16d1/soundflux/urbansounds/spectrograms/fold3',\n",
-       " '/media/nvidia/d171b53a-0021-4d77-b891-8d723bedc16d1/soundflux/urbansounds/spectrograms/fold4',\n",
-       " '/media/nvidia/d171b53a-0021-4d77-b891-8d723bedc16d1/soundflux/urbansounds/spectrograms/fold5',\n",
-       " '/media/nvidia/d171b53a-0021-4d77-b891-8d723bedc16d1/soundflux/urbansounds/spectrograms/fold6',\n",
-       " '/media/nvidia/d171b53a-0021-4d77-b891-8d723bedc16d1/soundflux/urbansounds/spectrograms/fold7',\n",
-       " '/media/nvidia/d171b53a-0021-4d77-b891-8d723bedc16d1/soundflux/urbansounds/spectrograms/fold8',\n",
-       " '/media/nvidia/d171b53a-0021-4d77-b891-8d723bedc16d1/soundflux/urbansounds/spectrograms/fold9',\n",
-       " '/media/nvidia/d171b53a-0021-4d77-b891-8d723bedc16d1/soundflux/urbansounds/spectrograms/fold10']"
+       "['/home/nvidia/soundflux_data/spectrograms/fold1',\n",
+       " '/home/nvidia/soundflux_data/spectrograms/fold2',\n",
+       " '/home/nvidia/soundflux_data/spectrograms/fold3',\n",
+       " '/home/nvidia/soundflux_data/spectrograms/fold4',\n",
+       " '/home/nvidia/soundflux_data/spectrograms/fold5',\n",
+       " '/home/nvidia/soundflux_data/spectrograms/fold6',\n",
+       " '/home/nvidia/soundflux_data/spectrograms/fold7',\n",
+       " '/home/nvidia/soundflux_data/spectrograms/fold8',\n",
+       " '/home/nvidia/soundflux_data/spectrograms/fold9',\n",
+       " '/home/nvidia/soundflux_data/spectrograms/fold10']"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -193,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,34 +224,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 1,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "_________________________________________________________________\n",
-      "Layer (type)                 Output Shape              Param #   \n",
-      "=================================================================\n",
-      "inception_v3 (Model)         (None, 2, 6, 2048)        21802784  \n",
-      "_________________________________________________________________\n",
-      "global_average_pooling2d_2 ( (None, 2048)              0         \n",
-      "_________________________________________________________________\n",
-      "dense_4 (Dense)              (None, 2000)              4098000   \n",
-      "_________________________________________________________________\n",
-      "dropout_2 (Dropout)          (None, 2000)              0         \n",
-      "_________________________________________________________________\n",
-      "dense_5 (Dense)              (None, 2000)              4002000   \n",
-      "_________________________________________________________________\n",
-      "dense_6 (Dense)              (None, 10)                20010     \n",
-      "=================================================================\n",
-      "Total params: 29,922,794\n",
-      "Trainable params: 8,120,010\n",
-      "Non-trainable params: 21,802,784\n",
-      "_________________________________________________________________\n"
+      "Using TensorFlow backend.\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'img_height' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-96b86e834f0c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mkeras\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mapplications\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvgg16\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mVGG16\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mkeras\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mmetrics\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m \u001b[0minput_shape\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mimg_height\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mimg_width\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     10\u001b[0m \u001b[0mnclass\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m10\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'img_height' is not defined"
      ]
     }
    ],
@@ -240,11 +255,12 @@
     "from keras import optimizers, losses, activations, models\n",
     "from keras.layers import Convolution2D, Dense, Input, Flatten, Dropout, MaxPooling2D, BatchNormalization, GlobalAveragePooling2D, Concatenate\n",
     "from keras import applications\n",
+    "from keras.applications.vgg16 import VGG16\n",
     "from keras import metrics\n",
     "input_shape = (img_height, img_width,3)\n",
     "nclass = 10\n",
     "\n",
-    "base_model = applications.InceptionV3(weights='imagenet', \n",
+    "base_model = VGG16(weights='imagenet', \n",
     "                                include_top=False, \n",
     "                                input_shape=(img_height, img_width,3))\n",
     "base_model.trainable = False\n",
@@ -252,23 +268,23 @@
     "add_model = Sequential()\n",
     "add_model.add(base_model)\n",
     "add_model.add(GlobalAveragePooling2D())\n",
-    "add_model.add(Dense(2000,activation='relu'))\n",
-    "add_model.add(Dropout(0.3))\n",
     "#add_model.add(Dense(2000,activation='relu'))\n",
-    "add_model.add(Dense(2000,activation='relu'))\n",
+    "add_model.add(Dropout(0.5))\n",
+    "#add_model.add(Dense(2000,activation='relu'))\n",
+    "#add_model.add(Dense(2000,activation='relu'))\n",
     "#add_model.add(Dense(512,activation='relu'))\n",
     "add_model.add(Dense(nclass, \n",
     "                    activation='softmax'))\n",
     "\n",
     "#set optimizer\n",
     "#opt = optimizers.Adam(lr=0.05, beta_1=0.9, beta_2=0.999, decay=0.0)\n",
-    "opt = optimizers.SGD(lr=0.05, momentum=0.9,decay = 0.002)\n",
+    "opt = optimizers.RMSprop(lr=0.001)\n",
     "model = add_model\n",
     "model.compile(loss='categorical_crossentropy', \n",
     "              optimizer=opt,\n",
     "              metrics=['accuracy'])\n",
     "#needed to reset weights!\n",
-    "model.save_weights('raw_model.h5')\n",
+    "model.save_weights('raw_inception_model.h5')\n",
     "model.summary()"
    ]
   },
@@ -288,23 +304,33 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Running fold 1, holding data from /media/nvidia/d171b53a-0021-4d77-b891-8d723bedc16d1/soundflux/urbansounds/spectrograms/fold1 and training on the remaining 9\n",
+      "Running fold 1, holding data from /home/nvidia/soundflux_data/spectrograms/fold1 and training on the remaining 9\n",
       "Epoch 1/100\n",
-      "Found 888 images belonging to 10 classes.Found 873 images belonging to 10 classes.\n",
-      "\n",
-      "Found 837 images belonging to 10 classes.\n",
-      "Found 990 images belonging to 10 classes.\n",
       "Found 936 images belonging to 10 classes.\n",
-      "Found 816 images belonging to 10 classes.\n",
-      "Found 806 images belonging to 10 classes.\n",
-      "Found 925 images belonging to 10 classes.\n",
+      "Found 873 images belonging to 10 classes.\n",
       "Found 823 images belonging to 10 classes.\n",
+      "Found 990 images belonging to 10 classes.\n",
+      "Found 888 images belonging to 10 classes.\n",
+      "Found 925 images belonging to 10 classes.\n",
+      "Found 816 images belonging to 10 classes.\n",
+      "Found 837 images belonging to 10 classes.\n",
       "Found 838 images belonging to 10 classes.\n",
-      "225/225 [==============================] - 159s 707ms/step - loss: 14.2681 - acc: 0.1111 - val_loss: 14.1033 - val_acc: 0.1250\n",
+      "Found 806 images belonging to 10 classes.\n",
+      "225/225 [==============================] - 162s 719ms/step - loss: 2.6191 - acc: 0.2740 - val_loss: 4.8862 - val_acc: 0.1263\n",
       "Epoch 2/100\n",
-      "225/225 [==============================] - 129s 573ms/step - loss: 14.2555 - acc: 0.1156 - val_loss: 14.0437 - val_acc: 0.1287\n",
+      "225/225 [==============================] - 135s 598ms/step - loss: 2.4718 - acc: 0.3005 - val_loss: 6.3257 - val_acc: 0.0940\n",
       "Epoch 3/100\n",
-      "197/225 [=========================>....] - ETA: 14s - loss: 14.2465 - acc: 0.1161"
+      "225/225 [==============================] - 133s 593ms/step - loss: 2.4445 - acc: 0.2987 - val_loss: 5.0303 - val_acc: 0.1287\n",
+      "Epoch 4/100\n",
+      "225/225 [==============================] - 133s 592ms/step - loss: 2.3953 - acc: 0.3167 - val_loss: 5.8460 - val_acc: 0.1287\n",
+      "Epoch 5/100\n",
+      "225/225 [==============================] - 133s 593ms/step - loss: 2.3799 - acc: 0.3181 - val_loss: 5.1355 - val_acc: 0.1030\n",
+      "Epoch 6/100\n",
+      "225/225 [==============================] - 133s 591ms/step - loss: 2.3461 - acc: 0.3281 - val_loss: 5.7032 - val_acc: 0.1287\n",
+      "Epoch 7/100\n",
+      "225/225 [==============================] - 133s 593ms/step - loss: 2.3226 - acc: 0.3267 - val_loss: 5.3691 - val_acc: 0.1287\n",
+      "Epoch 8/100\n",
+      "223/225 [============================>.] - ETA: 1s - loss: 2.3140 - acc: 0.3306"
      ]
     }
    ],
@@ -314,7 +340,7 @@
     "for directory in fold_directories:\n",
     "    fold +=1\n",
     "    #RESET WEIGHTS!!\n",
-    "    model.load_weights('raw_model.h5')\n",
+    "    model.load_weights('raw_inception_model.h5')\n",
     "    #\n",
     "    train_directories = list(set(fold_directories) - set([directory]))\n",
     "    test_directories = [directory]\n",
@@ -337,11 +363,11 @@
     "                              validation_steps=approx_fold_size/batch_size,\n",
     "                              shuffle=True, \n",
     "                              verbose=True)\n",
-    "    model.save_weights('trained_model_fold_{}.h5'.format(fold))\n",
-    "    with open('training_history_fold_{}.json'.format(fold), 'w') as f:\n",
+    "    model.save_weights('trained_inception_model_fold_{}.h5'.format(fold))\n",
+    "    with open('training_inception_history_fold_{}.json'.format(fold), 'w') as f:\n",
     "        json.dump(history.history, f)\n",
-    "    save_plots(history,'training_accuracy_plot_fold_{}.png'.format(fold),\n",
-    "               'training_lossaccuracy_plot_fold_{}.png'.format(fold))\n",
+    "    save_plots(history,'training_inception_accuracy_plot_fold_{}.png'.format(fold),\n",
+    "               'training_inception_lossaccuracy_plot_fold_{}.png'.format(fold))\n",
     "    if fold == num_folds:\n",
     "        break"
    ]
@@ -354,13 +380,6 @@
    "source": [
     "show_plots(history)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
