Training on curated dataset

--- a/Transfer Learning Notebooks/Training From VGG16 - Spectrogram - Curated Dataset.ipynb
+++ b/Transfer Learning Notebooks/Training From VGG16 - Spectrogram - Curated Dataset.ipynb
@@ -4,14 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Train Model"
+    "# First things first"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The idea of this step is to leverage existing state of the art models such as Ince"
+    "Get the data from: https://s3.amazonaws.com/soundflux-urbansounds/curated_4_class_bundle.zip"
    ]
   },
   {
@@ -155,7 +155,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "curated_folders = [\"/media/romulo/6237-3231/curated_soundflux_dataset/bundle\"]"
+    "train_folder = \"/home/nvidia/bundle/split/train/\"\n",
+    "test_folder = \"/home/nvidia/bundle/split/test/\""
    ]
   },
   {
@@ -189,7 +190,7 @@
    "outputs": [],
    "source": [
     "input_shape = (img_height, img_width,3)\n",
-    "nclass = 7"
+    "nclass = 5"
    ]
   },
   {
@@ -267,10 +268,10 @@
       "_________________________________________________________________\n",
       "dropout (Dropout)            (None, 32)                0         \n",
       "_________________________________________________________________\n",
-      "dense_3 (Dense)              (None, 7)                 231       \n",
+      "dense_3 (Dense)              (None, 5)                 165       \n",
       "=================================================================\n",
-      "Total params: 15,012,487\n",
-      "Trainable params: 297,799\n",
+      "Total params: 15,012,421\n",
+      "Trainable params: 297,733\n",
       "Non-trainable params: 14,714,688\n",
       "_________________________________________________________________\n"
      ]
@@ -319,8 +320,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "img_generator = generate_generator_multiple(generator=datagen,\n",
-    "                                           directories = curated_folders,\n",
+    "train_generator = generate_generator_multiple(generator=datagen,\n",
+    "                                           directories = [train_folder],\n",
+    "                                           batch_size=batch_size,\n",
+    "                                           img_height=img_height,\n",
+    "                                           img_width=img_width)\n",
+    "test_generator = generate_generator_multiple(generator=datagen,\n",
+    "                                           directories = [test_folder],\n",
     "                                           batch_size=batch_size,\n",
     "                                           img_height=img_height,\n",
     "                                           img_width=img_width)"
@@ -345,8 +351,8 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/30\n",
-      "Found 1030 images belonging to 7 classes.\n",
-      "23/31 [=====================>........] - ETA: 1:05 - loss: 1.8134 - acc: 0.3139"
+      "Found 432 images belonging to 5 classes.\n",
+      " 9/31 [=======>......................] - ETA: 54s - loss: 1.6080 - acc: 0.2465 "
      ]
     }
    ],
@@ -354,8 +360,10 @@
     "#RESET WEIGHTS!!\n",
     "#model.load_weights('raw_model.h5')\n",
     "#\n",
-    "history = model.fit_generator(img_generator,\n",
+    "history = model.fit_generator(train_generator,\n",
     "                          steps_per_epoch=approx_fold_size/batch_size,\n",
+    "                          validation_data = test_generator,\n",
+    "                          validation_steps = approx_fold_size/batch_size,\n",
     "                          epochs=30,\n",
     "                          shuffle=True, \n",
     "                          verbose=True)"
@@ -378,7 +386,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
