Training on 4 curated classes results

--- a/Transfer Learning Notebooks/Training From VGG16 - Spectrogram - Curated Dataset.ipynb
+++ b/Transfer Learning Notebooks/Training From VGG16 - Spectrogram - Curated Dataset.ipynb
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,8 +225,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Adding a few more layers\n",
+    "- More epochs\n",
+    "- Measure confusion, top class, etc"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -316,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -341,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "scrolled": false
    },
@@ -352,7 +361,66 @@
      "text": [
       "Epoch 1/30\n",
       "Found 432 images belonging to 5 classes.\n",
-      " 9/31 [=======>......................] - ETA: 54s - loss: 1.6080 - acc: 0.2465 "
+      "31/31 [============================>.] - ETA: 0s - loss: 1.4815 - acc: 0.3085Found 144 images belonging to 5 classes.\n",
+      "32/31 [==============================] - 68s 2s/step - loss: 1.4758 - acc: 0.3145 - val_loss: 1.2060 - val_acc: 0.5431\n",
+      "Epoch 2/30\n",
+      "32/31 [==============================] - 50s 2s/step - loss: 1.1306 - acc: 0.5283 - val_loss: 0.9084 - val_acc: 0.7050\n",
+      "Epoch 3/30\n",
+      "32/31 [==============================] - 51s 2s/step - loss: 0.9128 - acc: 0.6329 - val_loss: 0.7233 - val_acc: 0.7446\n",
+      "Epoch 4/30\n",
+      "32/31 [==============================] - 49s 2s/step - loss: 0.7878 - acc: 0.7207 - val_loss: 0.7354 - val_acc: 0.7226\n",
+      "Epoch 5/30\n",
+      "32/31 [==============================] - 51s 2s/step - loss: 0.7413 - acc: 0.7177 - val_loss: 0.6249 - val_acc: 0.7672\n",
+      "Epoch 6/30\n",
+      "32/31 [==============================] - 50s 2s/step - loss: 0.6603 - acc: 0.7461 - val_loss: 0.5091 - val_acc: 0.8297\n",
+      "Epoch 7/30\n",
+      "32/31 [==============================] - 50s 2s/step - loss: 0.6061 - acc: 0.7627 - val_loss: 0.6030 - val_acc: 0.7566\n",
+      "Epoch 8/30\n",
+      "32/31 [==============================] - 51s 2s/step - loss: 0.5879 - acc: 0.7939 - val_loss: 0.4603 - val_acc: 0.8265\n",
+      "Epoch 9/30\n",
+      "32/31 [==============================] - 49s 2s/step - loss: 0.5210 - acc: 0.8123 - val_loss: 0.4902 - val_acc: 0.8190\n",
+      "Epoch 10/30\n",
+      "32/31 [==============================] - 49s 2s/step - loss: 0.5112 - acc: 0.8212 - val_loss: 0.4887 - val_acc: 0.8235\n",
+      "Epoch 11/30\n",
+      "32/31 [==============================] - 49s 2s/step - loss: 0.4524 - acc: 0.8535 - val_loss: 0.4539 - val_acc: 0.8502\n",
+      "Epoch 12/30\n",
+      "32/31 [==============================] - 49s 2s/step - loss: 0.4155 - acc: 0.8632 - val_loss: 0.3898 - val_acc: 0.8534\n",
+      "Epoch 13/30\n",
+      "32/31 [==============================] - 50s 2s/step - loss: 0.4071 - acc: 0.8652 - val_loss: 0.4272 - val_acc: 0.8465\n",
+      "Epoch 14/30\n",
+      "32/31 [==============================] - 48s 2s/step - loss: 0.4001 - acc: 0.8740 - val_loss: 0.5732 - val_acc: 0.8050\n",
+      "Epoch 15/30\n",
+      "32/31 [==============================] - 48s 2s/step - loss: 0.3896 - acc: 0.8692 - val_loss: 0.4354 - val_acc: 0.8556\n",
+      "Epoch 16/30\n",
+      "32/31 [==============================] - 48s 1s/step - loss: 0.3475 - acc: 0.8847 - val_loss: 0.5352 - val_acc: 0.7971\n",
+      "Epoch 17/30\n",
+      "32/31 [==============================] - 49s 2s/step - loss: 0.3410 - acc: 0.8857 - val_loss: 0.4962 - val_acc: 0.8330\n",
+      "Epoch 18/30\n",
+      "32/31 [==============================] - 48s 2s/step - loss: 0.3509 - acc: 0.8760 - val_loss: 0.4168 - val_acc: 0.8750\n",
+      "Epoch 19/30\n",
+      "32/31 [==============================] - 48s 1s/step - loss: 0.2993 - acc: 0.8935 - val_loss: 0.5974 - val_acc: 0.8092\n",
+      "Epoch 20/30\n",
+      "32/31 [==============================] - 49s 2s/step - loss: 0.3325 - acc: 0.9023 - val_loss: 0.4065 - val_acc: 0.8599\n",
+      "Epoch 21/30\n",
+      "32/31 [==============================] - 48s 1s/step - loss: 0.2510 - acc: 0.9171 - val_loss: 0.6098 - val_acc: 0.8276\n",
+      "Epoch 22/30\n",
+      "32/31 [==============================] - 48s 1s/step - loss: 0.2687 - acc: 0.9141 - val_loss: 0.3732 - val_acc: 0.8772\n",
+      "Epoch 23/30\n",
+      "32/31 [==============================] - 48s 2s/step - loss: 0.2686 - acc: 0.9121 - val_loss: 0.4342 - val_acc: 0.8448\n",
+      "Epoch 24/30\n",
+      "32/31 [==============================] - 48s 2s/step - loss: 0.2577 - acc: 0.9150 - val_loss: 0.4812 - val_acc: 0.8438\n",
+      "Epoch 25/30\n",
+      "32/31 [==============================] - 48s 1s/step - loss: 0.2660 - acc: 0.9112 - val_loss: 0.5980 - val_acc: 0.8344\n",
+      "Epoch 26/30\n",
+      "32/31 [==============================] - 48s 2s/step - loss: 0.2107 - acc: 0.9413 - val_loss: 0.4933 - val_acc: 0.8534\n",
+      "Epoch 27/30\n",
+      "32/31 [==============================] - 48s 1s/step - loss: 0.2667 - acc: 0.9141 - val_loss: 0.5490 - val_acc: 0.8103\n",
+      "Epoch 28/30\n",
+      "32/31 [==============================] - 47s 1s/step - loss: 0.2816 - acc: 0.9005 - val_loss: 0.4180 - val_acc: 0.8695\n",
+      "Epoch 29/30\n",
+      "32/31 [==============================] - 49s 2s/step - loss: 0.2069 - acc: 0.9444 - val_loss: 0.4912 - val_acc: 0.8599\n",
+      "Epoch 30/30\n",
+      "32/31 [==============================] - 49s 2s/step - loss: 0.1844 - acc: 0.9327 - val_loss: 0.5418 - val_acc: 0.8534\n"
      ]
     }
    ],
@@ -367,6 +435,57 @@
     "                          epochs=30,\n",
     "                          shuffle=True, \n",
     "                          verbose=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Test on the final model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 144 images belonging to 5 classes.\n",
+      "32/31 [==============================] - 26s 827ms/step\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[0.6174462766482912, 0.84375]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_generator = generate_generator_multiple(generator=datagen,\n",
+    "                                           directories = [test_folder],\n",
+    "                                           batch_size=batch_size,\n",
+    "                                           img_height=img_height,\n",
+    "                                           img_width=img_width)\n",
+    "model.evaluate_generator(test_generator,\n",
+    "                              steps=approx_fold_size/batch_size,\n",
+    "                              verbose=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.save_weights('curated_model_v1.h5')"
    ]
   }
  ],
