Cleaning up repo

--- a/Transfer Learning Notebooks/Feature Extraction - FSD .wav to 2D MelSpectrogram to Png Files.ipynb
+++ b/Transfer Learning Notebooks/Feature Extraction - FSD .wav to 2D MelSpectrogram to Png Files.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "**Background:**\n",
     "\n",
-    "The purpose of this notebook is to transform a .wav file into a spectrogram and then feed it into a well known model such as InceptionV3 for feature generation"
+    "The purpose of this notebook is to transform the raw .wav files associated with this project: https://zenodo.org/record/2552860#.XIG9LMtKg5l into spectrograms."
    ]
   },
   {
@@ -193,7 +193,8 @@
     "from scipy import signal\n",
     "import librosa\n",
     "import matplotlib.pyplot as plt\n",
-    "import specdisplay"
+    "import specdisplay\n",
+    "from feature_generation import extract_spectrogram"
    ]
   },
   {
@@ -223,49 +224,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Defining spectrogram transformation function"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## NOTE!!\n",
-    "\n",
-    "We're averaging across channels, come back and try a different approach if that's not working"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def extract_spectrogram(samples,sample_rate,n_mels=128,n_fft=2048):\n",
-    "    feature_set = []\n",
-    "    if samples.shape[1:]:\n",
-    "        channels = samples.shape[1:][0]\n",
-    "    else:\n",
-    "        channels = 1\n",
-    "        samples = np.expand_dims(samples, axis=1)\n",
-    "    for i in range(channels):\n",
-    "        sample_channel_x = samples[:,i]\n",
-    "        mel_spectrogram = librosa.feature.melspectrogram(y=sample_channel_x, \n",
-    "                                                     sr=sample_rate,\n",
-    "                                                     n_fft=n_fft, \n",
-    "                                                     n_mels = n_mels\n",
-    "                                                        )\n",
-    "        decibel_spec = librosa.logamplitude(mel_spectrogram,ref_power=np.max)\n",
-    "        feature_set.append(decibel_spec)\n",
-    "    feature_set = np.array(feature_set)\n",
-    "    feature_set = np.mean(feature_set,axis=0)\n",
-    "    return feature_set"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# Creating the PNG spectrograms"
    ]
   },
@@ -275,17 +233,13 @@
    "source": [
     "**How are we organizing the output files?**\n",
     "\n",
-    "According to the researchers how created the dataset, larger files were used to obtain smaller audio sample for specific classes. With that in mind, having different chuncks of the same file in the training and validation datasets would cause the model to overfit and inflate validation accuracies. As a result, the researchers split the dataset into 10 folds, keeping data originated from the same files within a fold. The recomended way of working with the dataset is to use 9 out of the 10 folds for training and one for validation. This would be repeated 10 times with each fold being held as validation - (essentially k-fold).\n",
+    "According to the researchers, some of the audio samples in the training dataset were manually verified, and some others were not. All files in the test dataset were manually verified. \n",
     "\n",
-    "The accuracy score should be reported by averaging the results of the 10 different training/fold exercises.\n",
-    "\n",
-    "\n",
-    "See more on this article:\n",
-    "https://urbansounddataset.weebly.com/urbansound8k.html\n",
+    "This notebook has been used to extract features for both verified and non-verified datasets so the below definition of the metadata used has been changed a couple of times. Please adjust as necessary.\n",
     "\n",
     "**Folder structure**\n",
     "\n",
-    "/fold/class/filename.png\n",
+    "<train or test> / <manually verified (if applicable) > /class/filename.png\n",
     "\n",
     "This will help when using Kera's ImageDataGenerator.flow_from_directory api to train and test the data"
    ]
