--- a/Transfer Learning Notebooks/Feature Extraction - Urbansounds .wav to 2D MelSpectrogram to Png Files.ipynb
+++ b/Transfer Learning Notebooks/Feature Extraction - Urbansounds .wav to 2D MelSpectrogram to Png Files.ipynb
@@ -13,7 +13,7 @@
    "source": [
     "**Background:**\n",
     "\n",
-    "The purpose of this notebook is to transform a .wav file into a spectrogram and then feed it into a well known model such as InceptionV3 for feature generation"
+    "The purpose of this notebook is to transform the UrbanSounds .wav files into spectrograms."
    ]
   },
   {
@@ -160,34 +160,39 @@
       "  if self.cachedir is not None:\n",
       "/home/romulo/github/python_virtual_envs/soundflux/lib/python3.6/site-packages/librosa/cache.py:36: DeprecationWarning: The 'cachedir' attribute has been deprecated in version 0.12 and will be removed in version 0.14.\n",
       "Use os.path.join(memory.location, 'joblib') attribute instead.\n",
+      "  if self.cachedir is not None:\n",
+      "/home/romulo/github/python_virtual_envs/soundflux/lib/python3.6/site-packages/librosa/cache.py:36: DeprecationWarning: The 'cachedir' attribute has been deprecated in version 0.12 and will be removed in version 0.14.\n",
+      "Use os.path.join(memory.location, 'joblib') attribute instead.\n",
+      "  if self.cachedir is not None:\n",
+      "/home/romulo/github/python_virtual_envs/soundflux/lib/python3.6/site-packages/librosa/cache.py:36: DeprecationWarning: The 'cachedir' attribute has been deprecated in version 0.12 and will be removed in version 0.14.\n",
+      "Use os.path.join(memory.location, 'joblib') attribute instead.\n",
+      "  if self.cachedir is not None:\n",
+      "/home/romulo/github/python_virtual_envs/soundflux/lib/python3.6/site-packages/librosa/cache.py:36: DeprecationWarning: The 'cachedir' attribute has been deprecated in version 0.12 and will be removed in version 0.14.\n",
+      "Use os.path.join(memory.location, 'joblib') attribute instead.\n",
+      "  if self.cachedir is not None:\n",
+      "/home/romulo/github/python_virtual_envs/soundflux/lib/python3.6/site-packages/librosa/cache.py:36: DeprecationWarning: The 'cachedir' attribute has been deprecated in version 0.12 and will be removed in version 0.14.\n",
+      "Use os.path.join(memory.location, 'joblib') attribute instead.\n",
+      "  if self.cachedir is not None:\n",
+      "/home/romulo/github/python_virtual_envs/soundflux/lib/python3.6/site-packages/librosa/cache.py:36: DeprecationWarning: The 'cachedir' attribute has been deprecated in version 0.12 and will be removed in version 0.14.\n",
+      "Use os.path.join(memory.location, 'joblib') attribute instead.\n",
+      "  if self.cachedir is not None:\n",
+      "/home/romulo/github/python_virtual_envs/soundflux/lib/python3.6/site-packages/librosa/cache.py:36: DeprecationWarning: The 'cachedir' attribute has been deprecated in version 0.12 and will be removed in version 0.14.\n",
+      "Use os.path.join(memory.location, 'joblib') attribute instead.\n",
+      "  if self.cachedir is not None:\n",
+      "/home/romulo/github/python_virtual_envs/soundflux/lib/python3.6/site-packages/librosa/cache.py:36: DeprecationWarning: The 'cachedir' attribute has been deprecated in version 0.12 and will be removed in version 0.14.\n",
+      "Use os.path.join(memory.location, 'joblib') attribute instead.\n",
       "  if self.cachedir is not None:\n"
      ]
     },
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/romulo/github/python_virtual_envs/soundflux/lib/python3.6/site-packages/librosa/cache.py:36: DeprecationWarning: The 'cachedir' attribute has been deprecated in version 0.12 and will be removed in version 0.14.\n",
-      "Use os.path.join(memory.location, 'joblib') attribute instead.\n",
-      "  if self.cachedir is not None:\n",
-      "/home/romulo/github/python_virtual_envs/soundflux/lib/python3.6/site-packages/librosa/cache.py:36: DeprecationWarning: The 'cachedir' attribute has been deprecated in version 0.12 and will be removed in version 0.14.\n",
-      "Use os.path.join(memory.location, 'joblib') attribute instead.\n",
-      "  if self.cachedir is not None:\n",
-      "/home/romulo/github/python_virtual_envs/soundflux/lib/python3.6/site-packages/librosa/cache.py:36: DeprecationWarning: The 'cachedir' attribute has been deprecated in version 0.12 and will be removed in version 0.14.\n",
-      "Use os.path.join(memory.location, 'joblib') attribute instead.\n",
-      "  if self.cachedir is not None:\n",
-      "/home/romulo/github/python_virtual_envs/soundflux/lib/python3.6/site-packages/librosa/cache.py:36: DeprecationWarning: The 'cachedir' attribute has been deprecated in version 0.12 and will be removed in version 0.14.\n",
-      "Use os.path.join(memory.location, 'joblib') attribute instead.\n",
-      "  if self.cachedir is not None:\n",
-      "/home/romulo/github/python_virtual_envs/soundflux/lib/python3.6/site-packages/librosa/cache.py:36: DeprecationWarning: The 'cachedir' attribute has been deprecated in version 0.12 and will be removed in version 0.14.\n",
-      "Use os.path.join(memory.location, 'joblib') attribute instead.\n",
-      "  if self.cachedir is not None:\n",
-      "/home/romulo/github/python_virtual_envs/soundflux/lib/python3.6/site-packages/librosa/cache.py:36: DeprecationWarning: The 'cachedir' attribute has been deprecated in version 0.12 and will be removed in version 0.14.\n",
-      "Use os.path.join(memory.location, 'joblib') attribute instead.\n",
-      "  if self.cachedir is not None:\n",
-      "/home/romulo/github/python_virtual_envs/soundflux/lib/python3.6/site-packages/librosa/cache.py:36: DeprecationWarning: The 'cachedir' attribute has been deprecated in version 0.12 and will be removed in version 0.14.\n",
-      "Use os.path.join(memory.location, 'joblib') attribute instead.\n",
-      "  if self.cachedir is not None:\n"
+     "ename": "ImportError",
+     "evalue": "cannot import name 'extract_spectrograms'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-2-cb0cd9dbc457>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mmatplotlib\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpyplot\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mplt\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mspecdisplay\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mfeature_generation\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mextract_spectrograms\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m: cannot import name 'extract_spectrograms'"
      ]
     }
    ],
@@ -200,7 +205,8 @@
     "from scipy import signal\n",
     "import librosa\n",
     "import matplotlib.pyplot as plt\n",
-    "import specdisplay"
+    "import specdisplay\n",
+    "from feature_generation import extract_spectrograms"
    ]
   },
   {
@@ -224,49 +230,6 @@
    "outputs": [],
    "source": [
     "n_mels = 128"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Defining spectrogram transformation function"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## NOTE!!\n",
-    "\n",
-    "We're averaging across channels, come back and try a different approach if that's not working"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def extract_spectrogram(samples,sample_rate,n_mels=23,n_fft=2048):\n",
-    "    feature_set = []\n",
-    "    if samples.shape[1:]:\n",
-    "        channels = samples.shape[1:][0]\n",
-    "    else:\n",
-    "        channels = 1\n",
-    "        samples = np.expand_dims(samples, axis=1)\n",
-    "    for i in range(channels):\n",
-    "        sample_channel_x = samples[:,i]\n",
-    "        mel_spectrogram = librosa.feature.melspectrogram(y=sample_channel_x, \n",
-    "                                                     sr=sample_rate,\n",
-    "                                                     n_fft=n_fft, \n",
-    "                                                     n_mels = n_mels\n",
-    "                                                        )\n",
-    "        decibel_spec = librosa.logamplitude(mel_spectrogram,ref_power=np.max)\n",
-    "        feature_set.append(decibel_spec)\n",
-    "    feature_set = np.array(feature_set)\n",
-    "    feature_set = np.mean(feature_set,axis=0)\n",
-    "    return feature_set"
    ]
   },
   {
